--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
+*{
+    font-family: 'VT323', monospace;
+    font-size: 25px;
+}
+
+
 .calculator{
     margin-top: 100px;
     display: flex;
